--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -68,7 +68,7 @@
     </div>
     <div class='input-name-wrap'>
       <%= f.text_area :last_name_katakana, class:"input-name", id:"last-name-kana", placeholder:"例) ヤマダ" %>
-      <%= f.text_area :last_name_katakana, class:"input-name", id:"first-name-kana", placeholder:"例) リクタロウ" %>
+      <%= f.text_area :first_name_katakana, class:"input-name", id:"first-name-kana", placeholder:"例) リクタロウ" %>
     </div>
   </div>
   <div class="form-group">
@@ -79,7 +79,7 @@
     <div class='input-birth-wrap'>
       <%= raw sprintf(
                   f.date_select(
-                    :hoge,
+                    :birth_date,
                     class:'select-birth',
                     id:"birth-date",
                     use_month_numbers: true,
