item モデル単体テスト完了

--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -51,7 +51,7 @@
           <span class="indispensable">必須</span>
         </div>
         <%= f.collection_select(:category_id, Category.all, :id, :name, {}, {class:"select-box", id:"item-category"}) %>
-        <%# <%= f.collection_select(:genre_id, Genre.all, :id, :name, {}, {class:"genre-select"}) %> %>
+        <%# <%= f.collection_select(:genre_id, Genre.all, :id, :name, {}, {class:"genre-select"}) %>
         <div class="weight-bold-text">
           商品の状態
           <span class="indispensable">必須</span>
