--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -5,10 +5,10 @@
   </header>
   <div class="items-sell-main">
     <h2 class="items-sell-title">商品の情報を入力</h2>
-    <%= form_with model: @item, url:items_path, local: true do |f| %>
+    <%= form_with model:@item, url:items_path, local: true do |f| %>
 
     <%# インスタンスを渡して、エラー発生時にメッセージが表示されるようにしましょう。%>
-    <% render 'shared/error_messages', model:@item, f.object %>
+    <%= render 'shared/error_messages', model: f.object %>
     <%# //インスタンスを渡して、エラー発生時にメッセージが表示されるようにしましょう。%>
 
     <%# 出品画像 %>
@@ -116,7 +116,7 @@
       </div>
     </div>
     <%# /販売価格 %>
-
+    
     <%# 注意書き %>
     <div class="caution">
       <p class="sentence">
@@ -139,7 +139,7 @@
     <%# 下部ボタン %>
     <div class="sell-btn-contents">
       <%= f.submit "出品する" ,class:"sell-btn" %>
-       <%=link_to 'もどる', root_path, class:"back-btn" %>
+       <%# <%=link_to 'もどる', root_path, class:"back-btn" %> %>
     </div>
     <%# /下部ボタン %>
   </div>
