--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -123,13 +123,13 @@
   
   <div class='item-contents'>
     <h2 class='title'>ピックアップカテゴリー</h2>
-    <%= link_to '新規投稿商品', "#", class: "subtitle" %>
+    <%= link_to '新規投稿商品', new_item_path, class: "subtitle" %>
     
     <ul class='item-lists'>
       <% @items.each do |item| %>
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <li class='list'>
-        <%= link_to "#" do %>
+        <%= link_to item_path(item.id) do %>
         <div class='item-img-content'>
           <%= image_tag item.image.variant(resize: '500x500'), class: 'item-img' if item.image.attached? %>
           <%# 商品が売れていればsold outを表示しましょう %>
