--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -133,11 +133,12 @@
         <div class='item-img-content'>
           <%= image_tag item.image.variant(resize: '500x500'), class: 'item-img' if item.image.attached? %>
           <%# 商品が売れていればsold outを表示しましょう %>
+          <% if item.purchase_record.present? %>
           <div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
           <%# //商品が売れていればsold outを表示しましょう %>
-
+          <% end %>
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
