--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -57,9 +57,9 @@
           <span class="indispensable">必須</span>
         </div>
         <div class='input-expiration-date-wrap'>
-          <%= f.text_area 'card-exp-month', class:"input-expiration-date", id:"card-exp-month", placeholder:"例)3" %>
+          <%= f.text_field 'card-exp-month', class:"input-expiration-date", id:"card-exp-month", placeholder:"例)3" %>
           <p>月</p>
-          <%= f.text_area 'card-exp-year', class:"input-expiration-date", id:"card-exp-year", placeholder:"例)23" %>
+          <%= f.text_field 'card-exp-year', class:"input-expiration-date", id:"card-exp-year", placeholder:"例)23" %>
           <p>年</p>
         </div>
       </div>
